# Cabana_package_template

./: .gitignore  CMakeLists.txt  README.md  automate.py  makefile  plot_particles.py
docs/src/: SUMMARY.md  external_libraries.md  mpi_in_cabana.md
examples/: CMakeLists.txt  learn_cabana_grid_01_types_example.cpp  learn_cabana_grid_02_global_mesh_example.cpp  learn_cabana_grid_03_partitioner_example.cpp  test_01_particles_creation.cpp  test_02_compute_neighbours.cpp  test_03_compute_velocity_accelerations.cpp  test_03_force_computation.cpp  test_04_policy_with_decreasing_limits.cpp  test_07_kokkos_view_vector_type.cpp  test_08_call_external_libraries_eigen3.cpp  test_compare_python_01_nested_for_loop.cpp  test_compare_python_01_nested_for_loop.py  test_compare_python_02_serial_for_loop.cpp  test_compare_python_02_serial_for_loop.py  test_compare_python_03_reduce.cpp  test_compare_python_03_reduce.py
python_src/: nested_for_loop_and_for_loop.py  nester_for_loop_and_for_loop.py
src/: CMakeLists.txt  CabanaDEM.hpp  CabanaNewPkg.hpp  CabanaNewPkg_Particles.hpp  CabanaNewPkg_Velocity_Accelerations.hpp
unit_test/: .#tstParticlesCreation.hpp  CMakeLists.txt  tstIntegrator.hpp  tstParticlesCreation.hpp  tstVelocityAccelerations.hpp
